crates/plotnik-lib/tests/02-parser/recovery_validation/pipe_in_tree.txt
(a | b)
------------------ DIAGNOSTICS -------------------
error: patterns are separated by whitespace
 --> query.ptk:1:4
  |
1 | (a | b)
  |    ^
  |
help: remove the `|`
  |
1 - (a | b)
1 + (a  b)
  |

error: node kinds must be parenthesized
 --> query.ptk:1:6
  |
1 | (a | b)
  |      ^
  |
help: wrap in parentheses
  |
1 - (a | b)
1 + (a | (b))
  |
